@@ -1,22 +1,27 @@
-# Sample .travis.yml for R projects.
-#
-# See https://github.com/craigcitro/r-travis
-#     https://github.com/eddelbuettel/r-travis/
-
-sudo: required
+# Run Travis CI for R using https://eddelbuettel.github.io/r-travis/
 
 language: c
 
+sudo: required
+
+dist: trusty
+
 before_install:
-  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
-  - chmod 755 ./travis-tool.sh
-  - ./travis-tool.sh bootstrap
+  - curl -OLs https://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
+  - ./run.sh bootstrap
 
 install:
-  - ./travis-tool.sh install_aptget r-cran-curl
+  - ./run.sh install_aptget r-cran-curl
 
-script: ./travis-tool.sh run_tests
+script:
+  - ./run.sh run_tests
 
+after_failure:
+  - ./run.sh dump_logs
+
+after_success:
+  - ./run.sh coverage
+   
 notifications:
   email:
     on_success: change
